k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ravenx-url
spec:
  selector:
    matchLabels:
      app: ravenx-url
  template:
    metadata:
      labels:
        app: ravenx-url
    spec:
      containers:
        - name: jaeger
          image: jaegertracing/all-in-one:1.22
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
          ports:
            - containerPort: 16686
            - containerPort: 4317
        - name: redict
          image: registry.redict.io/redict:bookworm
          command:
            - "redict-server"
            - "/etc/redict/redict.conf"
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
          volumeMounts:
            - mountPath: "/var/data"
              name: redict-pvc
            - mountPath: "/etc/redict"
              name: redict-config
          ports:
            - containerPort: 6379
        - name: ravenx-url-nginx
          image: ghcr.io/alfreddobradi/ravenx-url:v1.4.0
          command:
            - 'ravenx'
            - '--config-path'
            - '/etc/ravenx/config.yaml'
          imagePullPolicy: Always
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
          - containerPort: 3000
          volumeMounts:
            - name: config
              mountPath: "/etc/ravenx"
              readOnly: true
      securityContext:
        fsGroup: 999
      volumes:
        - name: config
          configMap:
            name: app-config
        - name: redict-config
          configMap:
            name: redict-config
        - name: redict-pvc
          persistentVolumeClaim:
            claimName: ravenx-url-redis-claim
